# unai

./: Cargo.toml  README.md
api_docs/anthropic/: create.md
api_docs/gemini/: generate-content.md
examples/: 01_basic_client.rs  02_streaming.rs  03_agent_tools.rs  04_multimodal.rs  05_mcp_features.rs  README.md  anthropic.rs  deepseek.rs  file_upload.rs  fireworks.rs  gemini.rs  gemini_file.rs  gemini_stream.rs  groq.rs  groq_stream.rs  hyperbolic.rs  mistral.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  together.rs  xai.rs
src/: agent.rs  api.rs  client.rs  http.rs  lib.rs  mcp.rs  model.rs  options.rs  providers.rs  sse.rs  stream.rs  tools.rs
src/api/: anthropic.rs  gemini.rs  openai.rs
src/providers/: anthropic.rs  deepseek.rs  fireworks.rs  gemini.rs  groq.rs  hyperbolic.rs  mistral.rs  moonshot.rs  ollama.rs  openai.rs  openai_chat.rs  openrouter.rs  perplexity.rs  together.rs  xai.rs
tests/: agent_tests.rs  integration_tests.rs  options_tests.rs
unai_macros/: Cargo.toml
unai_macros/src/: lib.rs
