[workspace]
members = ["unai_macros"]

[package]
name = "unai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
bytes = "1.9"
itertools = "0.14.0"
nonempty = { version = "0.12.0", features = ["serialize"] }
schemars = { version = "0.8", features = ["derive"] }
unai_macros = { path = "./unai_macros" }
tracing = "0.1"
serde_with = "3.16.1"
rmcp = { version = "0.10.0", features = ["client", "server", "macros"] }
async-stream = "0.3.6"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.10.0", features = ["client", "server", "macros"] }
